# sommelier

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  local_hy_translate.py  main.py  mkdocs.yml  prd.md  pyproject.toml  remote_hy_pipeline.py  remote_pipeline.py  remote_qlora_preflight.py  remote_semantic_review.py  remote_serving.py  remote_translate.py  sommelier_entrypoint.py  spec.md
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/blogposts/: sommelier_blog_post.md  sommelier_experiment_braindump.md  sommelier_v2_run_francais.md
docs/concepts/: adapter.md  artifacts.md  data.md  design-decisions.md  determinism.md  evaluation.md  pipeline.md  training.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: remote-execution.md  reproduction.md  serving.md
docs/project/: licensing.md  security.md  testing.md
docs/reference/: artifacts.md  cli.md  configuration.md  errors.md  metrics.md
docs/release/: hebrew-hymt-adapter-card.md  hebrew-hymt-dataset-card.md  hebrew-v3-adapter-card-template.md  hebrew-v3-dataset-card.md  v1.0-checklist.md
docs/results/: french-run.md  hebrew-hymt.md  hebrew-v3.md  reference-run.md
docs/rfcs/: RFC-0001-project-configuration-and-run-manifest.md  RFC-0002-dataset-preparation-and-split-discipline.md  RFC-0003-tool-call-chat-formatting.md  RFC-0004-adapter-training-contract.md  RFC-0005-evaluation-parser-and-metrics.md  RFC-0006-artifact-store-and-schema-versioning.md  RFC-0007-remote-gpu-orchestration.md  RFC-0008-cli-and-python-public-api.md  RFC-0009-observability-and-run-reports.md  RFC-0010-optional-inference-service.md  RFC-0011-security-licensing-and-release-gates.md
docs/roadmap/: IMPLEMENTATION.md
docs/spec/: 00-overview.md  01-architecture.md  02-public-api.md  03-data-model.md  04-error-model.md  05-observability.md  06-security.md  07-testing-strategy.md  08-performance-budget.md  09-release-and-versioning.md  10-glossary.md
docs/stylesheets/: extra.css
examples/: config.full.yaml  config.he-hymt-full.yaml  config.he-hymt-smoke.yaml  config.invalid.yaml  config.smoke.yaml  config.v3-he-full.yaml  config.v3-he-smoke.yaml
licenses/: LICENSE-LLAMA-3.1.txt  LICENSE-NVIDIA-OPEN-MODEL.txt  NOTICE  THIRD_PARTY.md
paper/: .gitignore  Makefile  README.md  main.tex  references.bib
paper/figures/: gen_fig_language_gap.py  gen_fig_results.py
sommelier/: artifacts.py  cli.py  config.py  errors.py  hebrew_v3_preregistration.py  logs.py  manifests.py  pipeline.py  publication.py  redaction.py  release.py  reviewer.py  run_context.py  runtime_metadata.py  security.py  tracking.py
sommelier/analysis/: __init__.py  tokenization.py
sommelier/data/: export.py  gpu.py  load.py  normalize.py  openai_evidence.py  openai_pricing.py  openai_translate.py  prepare.py  semantic_review.py  split.py  translate.py  types.py  validate.py
sommelier/evaluation/: data_provenance.py  experiment.py  generate.py  metrics.py  parse.py  release_evidence.py  render.py  report.py  statistics.py  tco.py
sommelier/formatting/: chat.py  templates.py
sommelier/remote/: app.py  images.py
sommelier/serving/: openai_compat.py  schemas.py
sommelier/training/: authorization.py  collators.py  (+3 more)
space/: README.md  index.html
tests/: __init__.py  hebrew_v3_translation_evidence.py  test_adapter_identity.py  test_adapter_service.py  test_artifacts.py  test_cli_commands.py  test_compare_reports.py  test_config.py  test_data_validation.py  test_docs_links.py  test_errors.py  test_format_messages.py  test_format_rendering.py  test_generation_runner.py  test_gpu_data.py  test_imports.py  test_label_masking.py  test_local_hy_translate.py  test_logging.py  test_manifests.py  test_metrics.py  test_parser.py  test_pipeline.py  test_publication.py  test_redaction.py  test_release_preflight.py  test_remote_images.py  test_remote_openai_translation_contract.py  test_remote_pipeline_contract.py  test_remote_pipeline_staging.py  test_remote_qlora_preflight_contract.py  test_remote_semantic_review_contract.py  test_remote_translate_contract.py  test_remote_wrappers.py  test_report_rendering.py  test_reviewer_preregistration.py  test_runtime_metadata.py  test_schema_readers.py  test_secret_hygiene.py  test_serving_schemas.py  (+7 more)
(+77 files in other folders)
