[project]
name = "sommelier"
version = "0.1.0"
description = "Reference implementation for fine-tuning small open models for tool calling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "modal>=1.5.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
sommelier = "sommelier.cli:main"

[project.optional-dependencies]
data-gpu = ["cudf-cu12"]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-pyyaml>=6.0",
    "python-dotenv>=1.2.2",
]
docs = [
    "mkdocs-material>=9.6",
]
publish = [
    "huggingface-hub==1.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sommelier"]

[tool.hatch.build.targets.sdist]
# Keep source releases reproducible even when the checkout contains ignored
# model artifacts, virtual environments, or generated documentation media.
only-include = [
    ".env.example",
    ".github",
    ".gitignore",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "docs",
    "examples",
    "licenses",
    "local_hy_translate.py",
    "mkdocs.yml",
    "paper",
    "pyproject.toml",
    "remote_hy_pipeline.py",
    "remote_pipeline.py",
    "remote_qlora_preflight.py",
    "remote_semantic_review.py",
    "remote_serving.py",
    "remote_translate.py",
    "sommelier",
    "sommelier_entrypoint.py",
    "space",
    "tests",
    "uv.lock",
]
exclude = [
    "**/.cache/**",
    "**/.DS_Store",
    "**/.hypothesis/**",
    "**/.ipynb_checkpoints/**",
    "**/.mypy_cache/**",
    "**/.pytest_cache/**",
    "**/.ruff_cache/**",
    "**/.venv*/**",
    "**/__pycache__/**",
    "**/artifacts/**",
    "**/build/**",
    "**/checkpoints/**",
    "**/dist/**",
    "**/htmlcov/**",
    "**/node_modules/**",
    "**/out/**",
    "**/site/**",
    "**/*.avi",
    "**/*.mov",
    "**/*.mp4",
    "**/*.webm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
packages = ["sommelier", "tests"]

[[tool.mypy.overrides]]
module = [
    "modal",
    "modal.*",
    "cudf",
    "cudf.*",
    "transformers",
    "transformers.*",
    "torch",
    "torch.*",
    "peft",
    "peft.*",
    "wandb",
    "wandb.*",
    "fastapi",
    "fastapi.*",
    "uvicorn",
    "uvicorn.*",
    "vllm",
    "vllm.*",
    "datasets",
    "datasets.*",
    "huggingface_hub",
    "huggingface_hub.*",
]
ignore_missing_imports = true
# Optional heavy stacks are treated as untyped even when installed, so
# type checking gives the same result on GPU hosts and minimal CI.
follow_imports = "skip"

[[tool.mypy.overrides]]
# fastapi and modal decorators resolve as Any because their stacks are
# skipped above; the wrapper modules opt out of the decorator check only.
module = ["sommelier.serving.openai_compat", "sommelier.remote.app"]
disallow_untyped_decorators = false
